# zxtool

./: .gitignore  AssembleEngine.cpp  AssembleEngine.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Files.cpp  Files.h  Options.h  RunEngine.cpp  RunEngine.h  Z80Analyze.h  Z80Assemble.h  build.sh  compare_roms  compare_roms.cpp  main.cpp  profile_test.asm  test.asm  zxtool.cpp  zxtool_config.ini  zxtool_history.txt
Cmd/: CommandLine.cpp  CommandLine.h  Options.h
Core/: Analyzer.cpp  Analyzer.h  Application.cpp  Application.h  Assembler.h  CodeMap.h  Comment.h  Comments.cpp  Comments.h  Context.cpp  Context.h  Core.cpp  Core.h  CoreIncludes.h  Debugger.cpp  Debugger.h  Disassembler.h  Evaluator.cpp  Evaluator.h  Expression.cpp  Expression.h  Memory.h  Register.h  Source.h  Symbol.h  Symbols.cpp  Symbols.h  Tool.cpp  Tool.h  Variable.h  Variables.cpp  Variables.h  VirtualMachine.cpp  VirtualMachine.h  Z80Disassembler.h
Engines/: AssembleEngine.cpp  AssembleEngine.h  Autocompletion.cpp  Autocompletion.h  DebugEngine.cpp  DebugEngine.h  Debugger.cpp  Debugger.h  DisassembleEngine.cpp  DisassembleEngine.h  Engine.h  Hint.cpp  Hint.h  ProfileEngine.cpp  ProfileEngine.h  RunEngine.cpp  RunEngine.h  ScreenView.cpp  ScreenView.h  TraceModule.h
Files/: AsmFiles.cpp  AsmFiles.h  AssemblyFormat.cpp  AssemblyFormat.h  BinFiles.cpp  BinFiles.h  BinaryFormat.cpp  BinaryFormat.h  ControlFile.cpp  ControlFile.h  File.h  FileFormat.h  FileManager.cpp  FileManager.h  FileProcessor.cpp  FileProcessor.h  FileProvider.cpp  FileProvider.h  FileSaver.cpp  FileSaver.h  ListingFormat.cpp  ListingFormat.h  LstFile.cpp  LstFile.h  SkoolFile.cpp  SkoolFile.h  SkoolFormat.cpp  SkoolFormat.h  SymbolFile.cpp  SymbolFile.h  SymbolFormat.cpp  SymbolFormat.h  Z80File.cpp  Z80File.h  Z80Format.cpp  Z80Format.h
Tests/: AssemblyFormatTests.cpp  AssemblyFormatTests.h  BinaryFormatTests.cpp  BinaryFormatTests.h  CMakeLists.txt  CommandLineTests.cpp  CommandLineTests.h  CoreTests.cpp  CoreTests.h  ExpressionTests.cpp  ExpressionTests.h  ListingFormatTests.cpp  ListingFormatTests.h  SkoolFormatTests.cpp  SkoolFormatTests.h  SymbolFormatTests.cpp  SymbolFormatTests.h  Z80FormatTests.cpp  Z80FormatTests.h  run_tests.cpp
Utils/: Checksum.cpp  Checksum.h  Commands.cpp  Commands.h  Formatter.cpp  Formatter.h  Strings.cpp  Strings.h  Terminal.cpp  Terminal.h
